Sign up form buttons alignment fix

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -215,10 +215,10 @@ h2 {
   }
   .devise-links {
     li {
-      width: 46%;
+      width: 48%;
       float: left;
-      &:nth-child(2) {
-        margin-left: 2%;
+      &:nth-child(2n+2) {
+        margin-left: 4%;
       }
     }
   }
@@ -234,3 +234,15 @@ h2 {
   } 
   
 }
+
+/****************************************
+/* Foundation Overrides
+/****************************************/
+
+.small.button {
+  padding: 8px 10px 10px;
+}
+/****************************************
+/* /Foundation Overrides
+****************************************/
+
